@@ -1,3 +1,7 @@
+2021-09-24 Bernd Stroessenreuther <booboo@gluga.de>
+
+	* test/unit_tests.sh: adding a test for checking a local CRL file
+
 2021-09-22  Matteo Corti  <matteo@corti.li>
 
 	* Makefile (dist): make dist does not check the format (just builds the distribution)
